# srrhi

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  generate_validation.py  run_tests.bat  srrhi.h
src/: common.h  cpp_gen.cpp  flatten.h  hlsl_gen.cpp  hlsl_runtime_test.cpp  layout.cpp  main.cpp  parser.cpp  reflection_test.cpp  types.h  visualizer.cpp
test/hlsl/compute/: hlsl_test_arrays.hlsl  hlsl_test_lighting.hlsl  hlsl_test_matrix_variants.hlsl  hlsl_test_minimal.hlsl  hlsl_test_padding_trap.hlsl  hlsl_test_perframe.hlsl  hlsl_test_resource_basic.hlsl  hlsl_test_resource_mixed_space.hlsl  hlsl_test_resource_srv_buffers.hlsl  hlsl_test_resource_srv_textures.hlsl  hlsl_test_resource_uav_textures.hlsl  hlsl_test_scene.hlsl  hlsl_test_srinput_basic.hlsl  hlsl_test_srinput_compose_basic.hlsl  hlsl_test_srinput_inherit_basic.hlsl  hlsl_test_srinput_multiple.hlsl  hlsl_test_srinput_scalars.hlsl  hlsl_test_srinput_space_basic.hlsl  hlsl_test_valid_struct.hlsl
test/input/: test_alignment_edges.sr  test_arrays.sr  test_buffer_rows.sr  test_complex.sr  test_deep_nesting.sr  test_define_basic.sr  test_define_elif.sr  test_define_elif_after_else.sr  test_define_endif_without_if.sr  test_define_if_value.sr  test_define_ifdef.sr  test_define_in_cbuffer.sr  test_define_in_srinput.sr  test_define_in_struct.sr  test_define_invalid_type.sr  test_define_logical_and.sr  test_define_logical_or.sr  test_define_nested_if.sr  test_define_not_defined.sr  test_define_resource_template.sr  test_define_unclosed_if.sr  test_extern_cbuffer_direct.sr  test_extern_cbuffer_nested.sr  test_extern_global.sr  test_extern_in_srinput.sr  test_extern_in_struct.sr  test_extern_known_struct.sr  test_extern_multi_scope.sr  test_extern_namespace_basic.sr  test_extern_namespace_cbuffer.sr  test_extern_namespace_deep.sr  test_extern_namespace_in_srinput.sr  test_extern_namespace_missing_ident.sr  test_extern_namespace_multi.sr  test_extern_namespace_redeclare.sr  test_extern_namespace_resource_undeclared.sr  test_extern_namespace_undefined_usage.sr  test_extern_native_type.sr  test_extern_redeclare.sr  test_extern_resource_type.sr  (+129 more)
test/manual_validation/: validation_setter_resource_feature.cpp  validation_texture_dimension.cpp
test/output/cpp/: validation_setter_feature.cpp  validation_setter_resource_feature.cpp
